# kagent

./: .gitignore  DEVELOPMENT.md  Makefile  yuval.yaml
.github/workflows/: ci.yaml
agent-py/: main.py  pyproject.toml
agent-py/agent/: __init__.py  agent.py
examples/byo-adk/: Dockerfile  README.md  agent.py  k8s.yaml  main.py  pyproject.toml
examples/local-static-agent/: README.md
go/: Dockerfile  Makefile  go.mod  go.sum
go/api/v1alpha2/: agent_types.go  agenttemplate_types.go  zz_generated.deepcopy.go
go/cmd/controller/: main.go
go/config/rbac/: role.yaml
go/controller/cmd/: main.go
go/controller/translator/: adk_api_translator.go  adk_translator_golden_test.go  autogen_api_translator.go
go/internal/a2a/: a2a_handler_mux.go  a2a_handler_mux_test.go  a2a_task_processor.go  a2a_utils.go  manager.go  recording_manager.go
go/internal/adk/: types.go
go/internal/controller/: agent_controller.go  agenttemplate_controller.go
go/internal/database/: client.go  manager.go  models.go  service.go
go/internal/httpserver/: server.go
go/internal/utils/: agent.go  common.go  message_parsing.go
go/pkg/app/: app.go
go/pkg/auth/: auth.go
go/pkg/client/: toolserver.go
go/pkg/translator/: adk_api_translator_types.go
go/test/e2e/: e2e_test.go  invoke_api_test.go
go/test/e2e/agents/remote-kebab/: Dockerfile  README.md  agent.yaml  app.py  pyproject.toml
go/test/mockllm/: server.go
go/test/mockmain/: main.go
go/test/mockmcp/: server.go
helm/kagent/: values.yaml
helm/kagent-crds/templates/: kagent.dev_agents.yaml  kagent.dev_modelconfigs.yaml  kagent.dev_toolservers.yaml
helm/kagent/templates/: controller-deployment.yaml  deployment.yaml  service.yaml  toolserver-docs.yaml  toolserver-grafana.yaml  toolserver.yaml
helm/kagent/tests/: controller-service_test.yaml  deployment_test.yaml  service_test.yaml  toolserver-docs_test.yaml  toolserver_test.yaml
python/: Dockerfile  pyproject.toml
python/src/adk/: a2a.py  kagent_task_store.py  models.py
python/src/autogenstudio/web/routes/: invoke.py  tool_servers.py
python/src/kagent/: __init__.py  a2a.py  cli.py  kagent_session_service.py  kagent_task_store.py  models.py
python/src/kagent/adk/: __init__.py  kagent_a2a.py  kagent_session_service.py
ui/: package-lock.json  package.json
(+121 files in other folders)
