[project]
name = "remote-kebab"
version = "0.1"
description = "Remote kebab agent"
dependencies = [
    "a2a-sdk[http-server]>=0.3.5",
    "click>=8.1.8",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
